# firefly

./: .env.example  .gitignore  CLAUDE.md  README.md  dev.sh  pyproject.toml
src/firefly/: cli.py  config.py  costs.py  ffmpeg.py  project.py  schemas.py  studio.py  studio_jobs.py
src/firefly/api/: deps.py  jobs.py  main.py
src/firefly/api/routes/: audio.py  clips.py  cost.py  images.py  mix.py  plan.py  projects.py  render.py  studio.py
src/firefly/providers/: claude.py  elevenlabs.py  fal.py  music.py  suno.py
src/firefly/stages/: audio.py  clips.py  images.py  loop.py  mux.py  plan.py  render.py
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/design/: page.tsx
web/app/new/: page.tsx
web/app/projects/[slug]/: page.tsx
web/app/projects/[slug]/gallery/images/: page.tsx
web/app/projects/[slug]/studio/: page.tsx
web/app/projects/[slug]/studio/clip/: page.tsx
web/app/projects/[slug]/studio/final/: page.tsx
web/app/projects/[slug]/studio/image/: page.tsx
web/app/projects/[slug]/studio/mix/: page.tsx
web/app/projects/[slug]/studio/music/: page.tsx
web/app/projects/[slug]/studio/sfx/: page.tsx
web/app/projects/[slug]/studio/title/: page.tsx
web/app/projects/[slug]/wizard/: page.tsx
web/app/projects/[slug]/wizard/clips/: page.tsx
web/app/projects/[slug]/wizard/final/: page.tsx
web/components/: logo-options.tsx  picked-image-anchor.tsx  prompt-list-editor.tsx  studio-shell.tsx  wizard-layout.tsx
web/lib/: api.ts  job-polling.ts  studio-steps.ts  types.ts  wizard.ts
(+6 files in other folders)
