[project]
name = "firefly"
version = "0.1.0"
description = "Automated chill & cozy long-form video generation pipeline"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "fal-client>=0.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
]

[project.scripts]
firefly = "firefly.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
